force-app/main/default/objects/FinalDecision__c/FinalDecision__c.object-meta.xml
<CustomObject>
    <label>決裁</label>
    <nameField>
        <label>決裁番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>