force-app/main/default/objects/FinalDecision__c/fields/BuyTarget__c.field-meta.xml
<CustomField>
    <fullName>BuyTarget__c</fullName>
    <label>購入対象</label>
    <type>TextArea</type>
</CustomField>