force-app/main/default/objects/FinalDecision__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>決済日</label>
    <type>Date</type>
</CustomField>