force-app/main/default/objects/FinalDecision__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>目標</label>
    <type>TextArea</type>
</CustomField>