force-app/main/default/objects/FinalDecision__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFDC社見積書兼発注書の取得</fullName>
                <default>true</default>
                <label>SFDC社見積書兼発注書の取得</label>
            </value>
            <value>
                <fullName>部所発注確認書の申請</fullName>
            </value>
            <value>
                <fullName>本部長決裁申請の起案Noの取得</fullName>
            </value>
            <value>
                <fullName>本部長決裁の申請</fullName>
            </value>
            <value>
                <fullName>バウチャー発注の許可確認</fullName>
            </value>
            <value>
                <fullName>バウチャーの購入</fullName>
            </value>
            <value>
                <fullName>請求書処理</fullName>
            </value>
            <value>
                <fullName>バウチャー番号管理</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>