force-app/main/default/objects/FinalDecision__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>